# solana_stock_exchange

./: .gitignore  ABC_FINTECH_TEST_SUMMARY.md  ANCHOR_FIX_GUIDE.md  ANCHOR_WALLET_FIX.md  API_IMPLEMENTATION_GUIDE.md  API_IMPLEMENTATION_SUMMARY.md  API_REFERENCE.md  API_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_VISUAL.md  Anchor.toml  COMMANDS.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  EXPLORER_GUIDE.md  EXPLORER_INTEGRATION_COMPLETE.md  EXPLORER_QUICK_ACCESS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LICENSE  ORDER_BOOK_FIX.md  ORDER_BOOK_PRICE_FIX.md  POSTMAN_GUIDE.md  PRICE_TICK_SIZE_FIX.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_SYSTEM_TEST.md  QUICKSTART_TESTING.md  QUICK_START.md  RAZORPAY_INTEGRATION_GUIDE.md  README.md  REAL_TOKEN_TEST_RESULTS.md  SETUP_COMPLETE.md  SOL_CONVERSION_SUMMARY.md  SOL_TRANSFER_IMPLEMENTATION.md  SYSTEM_FLOW_TEST_RESULTS.md  TATA_MOTORS_TEST_RESULTS.md  TATA_TECH_IPO_TEST_GUIDE.md  (+12 more)
api/: .env.example  .gitignore  README.md  generate-wallet.js  init-exchange.js  initialize-exchange.ts  package-lock.json  package.json  setup.sh  solana.ts  tsconfig.json
backend/: .env.example  .gitignore  IMPLEMENTATION_GUIDE.md  PROJECT_SUMMARY.md  setup.sh  (+3 more)
programs/fee_management/: Cargo.toml
programs/fee_management/src/: constants.rs  error.rs  lib.rs  state.rs
programs/fee_management/src/instructions/: claim_referral_rewards.rs  collect_trading_fee.rs  distribute_fees.rs  distribute_staking_rewards.rs  initialize_fee_config.rs  initialize_fee_tier.rs  initialize_staking_pool.rs  mod.rs  update_fee_config.rs
(+133 files in other folders)
