[package]
name = "fee_management"
version = "0.1.0"
description = "Fee Management Program for Solana Stock Exchange"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fee_management"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
